@@ -38,28 +38,36 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     initCore("solrconfig.xml","schema.xml");
   }
 
+  private static SortSpec doParseSortSpec(String sortSpec, SolrQueryRequest req) {
+    if (random().nextBoolean()) {
+      return SortSpecParsing.parseSortSpec(sortSpec, req.getSchema());
+    } else {
+      return SortSpecParsing.parseSortSpec(sortSpec, req);
+    }
+  }
+
   @Test
   public void testSort() throws Exception {
     Sort sort;
     SortSpec spec;
     SolrQueryRequest req = req();
 
-    sort = SortSpecParsing.parseSortSpec("score desc", req).getSort();
+    sort = doParseSortSpec("score desc", req).getSort();
     assertNull("sort", sort);//only 1 thing in the list, no Sort specified
 
-    spec = SortSpecParsing.parseSortSpec("score desc", req);
+    spec = doParseSortSpec("score desc", req);
     assertNotNull("spec", spec);
     assertNull(spec.getSort());
     assertNotNull(spec.getSchemaFields());
     assertEquals(0, spec.getSchemaFields().size());
 
     // SOLR-4458 - using different case variations of asc and desc
-    sort = SortSpecParsing.parseSortSpec("score aSc", req).getSort();
+    sort = doParseSortSpec("score aSc", req).getSort();
     SortField[] flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.SCORE);
     assertTrue(flds[0].getReverse());
 
-    spec = SortSpecParsing.parseSortSpec("score aSc", req);
+    spec = doParseSortSpec("score aSc", req);
     flds = spec.getSort().getSort();
     assertEquals(1, flds.length);
     assertEquals(flds[0].getType(), SortField.Type.SCORE);
@@ -67,13 +75,13 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     assertEquals(1, spec.getSchemaFields().size());
     assertNull(spec.getSchemaFields().get(0));
 
-    sort = SortSpecParsing.parseSortSpec("weight dEsC", req).getSort();
+    sort = doParseSortSpec("weight dEsC", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
     assertEquals(flds[0].getReverse(), true);
 
-    spec = SortSpecParsing.parseSortSpec("weight dEsC", req);
+    spec = doParseSortSpec("weight dEsC", req);
     flds = spec.getSort().getSort();
     assertEquals(1, flds.length);
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
@@ -83,7 +91,7 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     assertNotNull(spec.getSchemaFields().get(0));
     assertEquals("weight", spec.getSchemaFields().get(0).getName());
 
-    sort = SortSpecParsing.parseSortSpec("weight desc,bday ASC", req).getSort();
+    sort = doParseSortSpec("weight desc,bday ASC", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
@@ -92,7 +100,7 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     assertEquals(flds[1].getField(), "bday");
     assertEquals(flds[1].getReverse(), false);
     //order aliases
-    sort = SortSpecParsing.parseSortSpec("weight top,bday asc", req).getSort();
+    sort = doParseSortSpec("weight top,bday asc", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
@@ -100,7 +108,7 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     assertEquals(flds[1].getType(), SortField.Type.LONG);
     assertEquals(flds[1].getField(), "bday");
     assertEquals(flds[1].getReverse(), false);
-    sort = SortSpecParsing.parseSortSpec("weight top,bday bottom", req).getSort();
+    sort = doParseSortSpec("weight top,bday bottom", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
@@ -110,14 +118,14 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     assertEquals(flds[1].getReverse(), false);
 
     //test weird spacing
-    sort = SortSpecParsing.parseSortSpec("weight         DESC,            bday         asc", req).getSort();
+    sort = doParseSortSpec("weight         DESC,            bday         asc", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
     assertEquals(flds[1].getField(), "bday");
     assertEquals(flds[1].getType(), SortField.Type.LONG);
     //handles trailing commas
-    sort = SortSpecParsing.parseSortSpec("weight desc,", req).getSort();
+    sort = doParseSortSpec("weight desc,", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
@@ -167,7 +175,7 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     assertEquals("bday", schemaFlds.get(2).getName());
     
     //handles trailing commas
-    sort = SortSpecParsing.parseSortSpec("weight desc,", req).getSort();
+    sort = doParseSortSpec("weight desc,", req).getSort();
     flds = sort.getSort();
     assertEquals(flds[0].getType(), SortField.Type.FLOAT);
     assertEquals(flds[0].getField(), "weight");
@@ -179,10 +187,10 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
     //the value sources get wrapped, so the out field is different than the input
     assertEquals(flds[0].getField(), "strdist(str(foo_s1),literal(junk), dist=org.apache.lucene.search.spell.JaroWinklerDistance)");
 
-    sort = SortSpecParsing.parseSortSpec("", req).getSort();
+    sort = doParseSortSpec("", req).getSort();
     assertNull(sort);
 
-    spec = SortSpecParsing.parseSortSpec("", req);
+    spec = doParseSortSpec("", req);
     assertNotNull(spec);
     assertNull(spec.getSort());
 
@@ -196,19 +204,19 @@ public class SortSpecParsingTest extends SolrTestCaseJ4 {
 
     //test some bad vals
     try {
-      sort = SortSpecParsing.parseSortSpec("weight, desc", req).getSort();
+      sort = doParseSortSpec("weight, desc", req).getSort();
       assertTrue(false);
     } catch (SolrException e) {
       //expected
     }
     try {
-      sort = SortSpecParsing.parseSortSpec("w", req).getSort();
+      sort = doParseSortSpec("w", req).getSort();
       assertTrue(false);
     } catch (SolrException e) {
       //expected
     }
     try {
-      sort = SortSpecParsing.parseSortSpec("weight desc, bday", req).getSort();
+      sort = doParseSortSpec("weight desc, bday", req).getSort();
       assertTrue(false);
     } catch (SolrException e) {
     }
